--- a/2_CSS/css/practice.css
+++ b/2_CSS/css/practice.css
@@ -4,7 +4,22 @@ table {
     height: 300px;
 }
 
-.red {
+tr > td.red:nth-child(1) {
     background-color: red;
 }
 
+tr > td.red:nth-child(2) {
+    background-color: red;
+}
+
+tr > td.green:nth-child(2) {
+    background-color: green;
+}
+
+tr > td.green:nth-child(3) {
+    background-color: green;
+}
+
+tr > td.green:nth-child(4) {
+    background-color: green;
+}
