--- a/2_CSS/css/text-style.css
+++ b/2_CSS/css/text-style.css
@@ -21,14 +21,14 @@
     color: rgb(142, 209, 202);
     /* 색상명으로 써도 되고 숫자로 써도 됨 */
     /* rgb값은 0~255 사이 */
-    /* 0, 0, 0 은 검정색 250,250,250은 흰색 */
+    /* 0, 0, 0 은 검정색 255,255,255은 흰색 */
 }
 
 #color-ul > li:nth-child(4) {
     color: rgba(50, 100, 150, 0.3);
     /* 색상명으로 써도 되고 숫자로 써도 됨 */
     /* a는 투명도 나타내는거*/
-    /*  0쪽에 가까우면 투명 1에 가까우면 진해짐 */
+    /* 0쪽에 가까우면 투명 1에 가까우면 진해짐 */
 }
 
 #color-ul > li:nth-child(5) {
@@ -37,7 +37,7 @@
     /* 채도, 명도는 %로 사용 */
 }
 
-#color-ul > li:nth-child() {
+#color-ul > li:nth-child(6) {
     color: hsla(360, 100%, 50%, 0.5);
     /* 색상, 채도, 명도 */
     /* 채도, 명도는 %로 사용 */
@@ -76,12 +76,12 @@
     /* 기본값 */
 }
 
-#align-test > p:nth-child(1) {
+#align-test > p:nth-child(2) {
     text-align: right;
     /* 오른쪽 정렬 */
 }
 
-#align-test > p:nth-child(1) {
+#align-test > p:nth-child(3) {
     text-align: center;
     /* 중앙 정렬 */
 }
