--- a/1_HTML5/00_세미로그인.css
+++ b/1_HTML5/00_세미로그인.css
@@ -36,12 +36,12 @@
     font-style: normal;
 }
 
-@font-face {
+/* @font-face {
     font-family: 'KOHIBaeumOTF';
     src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2201-2@1.0/KOHIBaeumOTF.woff') format('woff');
     font-weight: 100;
     font-style: normal;
-}
+} */
 
 * {
     /* color: white; */
@@ -72,6 +72,7 @@
     height: 100%;
     /* 전체 높이 */
     background-color: #e8f1fc;
+    /* background-color: rgb(3, 2, 15); */
     display: flex;
     flex-direction: row;
     justify-content: center;
